# generic_data_structure_library

./: CMakeLists.txt  README.md  main.cpp
include/: IStructures.hpp
src/: IStructures.cpp
